--- a/vtapi.conf
+++ b/vtapi.conf
@@ -10,6 +10,13 @@ password=""
 location="/mnt/vidte"
 connection="host=localhost port=4321 dbname=vidte user=vidte password="
 
+# Recommendation:
+# Pak k tomu heslu v configuráku - můžete použít prázdné, pokud je máte uložené v
+# ~/.pgpass (nebo nějaké Win alternativě) takto:
+# localhost:4321:*:vidte:mojeskaredeheslo
+
+# ssh -L4321:vidte:5432 kazi.fit.vutbr.cz
+
 ############## Input/output ##############
 # Input/output format [standard, csv, binary, sparse]
 # Read/write from/to input
