--- a/vtapi.conf
+++ b/vtapi.conf
@@ -12,10 +12,14 @@ connection="host=localhost port=5432 dbname=vidte user=vidte password="
 
 # Recommendation:
 # Pak k tomu heslu v configuráku - můžete použít prázdné, pokud je máte uložené v
-# ~/.pgpass (nebo nějaké Win alternativě) takto:
+# ~/.pgpass (%APPDATA%\postgresql\pgpass.conf on Windows) takto:
 # localhost:4321:*:vidte:mojeskaredeheslo
 
+# Finally, you can connect to some server as
 # ssh -L4321:vidte:5432 kazi.fit.vutbr.cz
+
+# If debugging, #define _DEBUG and/or verbose at least
+verbose
 
 ############## Input/output ##############
 # Input/output format [standard, csv, html, binary, sparse]
