Some fixes to the Query interface

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -34,7 +34,7 @@ write=""
 # or set dataset/sequence/interval/method/process/selection to work with
 
 where=""
-dataset=""
+dataset="public"
 sequence=""
 interval=""
 method=""
