select - choosing datasets

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -33,10 +33,10 @@ write=""
 # Explicitly specify WHERE clause, ex.: where="features is NULL"
 # or set dataset/sequence/interval/method/process/selection to work with
 
-where=""
-dataset=""
-sequence=""
-interval=""
-method=""
-process=""
-selection=""
+#where=""
+#dataset=""
+#sequence=""
+#interval=""
+#method=""
+#process=""
+#selection=""
