cli help and some conf details

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -5,8 +5,8 @@
 # Location of data files
 # Connection string (host=.. port=.. dbname=.. user=.. password=..)
 
-user=""
-password=""
+user="user1"
+#password=""
 location="/mnt/vidte"
 connection="host=localhost port=4321 dbname=vidte user=vidte password="
 
@@ -26,8 +26,8 @@ verbose
 # Read/write from/to input
 
 format="standard"
-read=""
-write=""
+#read=""
+#write=""
 
 ############## Workload specification (WHERE clause) ##############
 # Explicitly specify WHERE clause, ex.: where="features is NULL"
