--- a/vtapi.conf
+++ b/vtapi.conf
@@ -21,6 +21,9 @@ connection="host=localhost port=5432 dbname=vidte user=vidte password="
 # If debugging, #define _DEBUG and/or verbose at least
 verbose
 
+# Log file
+log="./vtapi.log"
+
 ############## Input/output ##############
 # Input/output format [standard, csv, html, binary, sparse]
 # Read/write from/to input
