--- a/vtapi.conf
+++ b/vtapi.conf
@@ -29,8 +29,8 @@ log="./vtapi.log"
 # Read/write from/to input
 
 format="standard"
-#read=""
-#write=""
+#input=""
+#output=""
 
 ############## Workload specification (WHERE clause) ##############
 # Explicitly specify WHERE clause, ex.: where="features is NULL"
