ITS database compatible test

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -8,7 +8,7 @@
 user="user1"
 #password=""
 location="/mnt/vidte"
-connection="host=localhost port=5432 dbname=vidte user=vidte password="
+connection="host=localhost port=4321 dbname=its user=its password="
 
 # Recommendation:
 # Pak k tomu heslu v configuráku - můžete použít prázdné, pokud je máte uložené v
@@ -22,7 +22,7 @@ connection="host=localhost port=5432 dbname=vidte user=vidte password="
 verbose
 
 # Log file
-log="./vtapi.log"
+log=""
 
 ############## Input/output ##############
 # Input/output format [standard, csv, html, binary, sparse]
