Just unification for v2

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -8,14 +8,14 @@
 user="user1"
 #password=""
 location="/mnt/vidte"
-connection="host=localhost port=4321 dbname=its user=its password="
+connection="host=localhost port=4321 dbname=vidte user=vidte password="
 
 # Recommendation:
-# Pak k tomu heslu v configuráku - můžete použít prázdné, pokud je máte uložené v
-# ~/.pgpass (%APPDATA%\postgresql\pgpass.conf on Windows) takto:
-# localhost:4321:*:vidte:mojeskaredeheslo
+# You can use an empty password in case you have it in your home folder
+# ~/.pgpass (%APPDATA%\postgresql\pgpass.conf on Windows) as:
+# localhost:4321:*:vidte:dummypassword
 
-# Finally, you can connect to some server as
+# Finally, you can connect to some server with limited database access (or VPN) as
 # ssh -L4321:vidte:5432 kazi.fit.vutbr.cz
 
 # If debugging, #define _DEBUG and/or verbose at least
@@ -37,7 +37,7 @@ format="standard"
 # or set dataset/sequence/interval/method/process/selection to work with
 
 #where=""
-dataset="public"
+dataset="sunar"
 #sequence=""
 #interval=""
 #method=""
