--- a/vtapi.conf
+++ b/vtapi.conf
@@ -1,13 +1,13 @@
 # VTApi configuration file
 
 ############## User/connection ##############
-# User name, password
-# Location of data files
-# Connection string (host=.. port=.. dbname=.. user=.. password=..)
-
-user="user1"
+user="your_login"
 #password=""
-location="/mnt/vidte"
+
+# specify your datasets location including the trailing slash
+location="/home/chmelarp/Projects/"
+
+# connection string is of the form "host=... port=.. dbname=... user=... password="
 connection="host=localhost port=4321 dbname=vidte user=vidte password="
 
 # Recommendation:
@@ -15,28 +15,23 @@ connection="host=localhost port=4321 dbname=vidte user=vidte password="
 # ~/.pgpass (%APPDATA%\postgresql\pgpass.conf on Windows) as:
 # localhost:4321:*:vidte:dummypassword
 
-# Finally, you can connect to some server with limited database access (or VPN) as
+# you can alternatively connect to a server with limited database access (or VPN) as
 # ssh -L4321:vidte:5432 kazi.fit.vutbr.cz
 
-# If debugging, #define _DEBUG and/or verbose at least
+# if debugging, #define _DEBUG and/or verbose at least
 verbose
 
-# Log file
+# log file (empty for cerr)
 log=""
 
 ############## Input/output ##############
-# Input/output format [standard, csv, html, binary, sparse]
-# Read/write from/to input
-
+# Input/output format [standard|csv| html|binary|sparse]
 format="standard"
 #input=""
 #output=""
 
 ############## Workload specification (WHERE clause) ##############
-# Explicitly specify WHERE clause, ex.: where="features is NULL"
-# or set dataset/sequence/interval/method/process/selection to work with
-
-#where=""
+# You can set [dataset/sequence/interval/method/process/selection] to work with
 dataset="sunar"
 #sequence=""
 #interval=""
@@ -44,3 +39,5 @@ dataset="sunar"
 #process=""
 #selection=""
 
+# or explicitly specify the WHERE clause, ex.: where="features is NULL"
+#where=""
