type fixes (int8, regclass..), limit/offset at next(), documentation

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -27,17 +27,19 @@ log=""
 ############## Input/output ##############
 # Input/output format [standard, csv, html, binary, sparse]
 # Read/write from/to input
+# Limit number of rows fetched at once per query (0 - unlimited)
 
 format="standard"
 #input=""
 #output=""
+querylimit=10000
 
 ############## Workload specification (WHERE clause) ##############
 # Explicitly specify WHERE clause, ex.: where="features is NULL"
 # or set dataset/sequence/interval/method/process/selection to work with
 
 #where=""
-dataset="sunar"
+dataset="public"
 #sequence=""
 #interval=""
 #method=""
