--- a/vtapi.conf
+++ b/vtapi.conf
@@ -25,14 +25,16 @@ verbose
 log=""
 
 ############## Input/output ##############
-# Input/output format [standard, csv, html, binary, sparse]
 # Input/output format [standard|csv| html|binary|sparse]
 # Limit number of rows fetched at once per query (0 - unlimited)
+# Limit width of columns when printing (string length / array elements)
 
 format="standard"
 #input=""
 #output=""
+
 querylimit=10000
+colwidth=10
 
 ############## Workload specification (WHERE clause) ##############
 # You can set [dataset/sequence/interval/method/process/selection] to work with
