print minor fix

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -27,14 +27,14 @@ log=""
 ############## Input/output ##############
 # Input/output format [standard|csv| html|binary|sparse]
 # Limit number of rows fetched at once per query (0 - unlimited)
-# Limit width of columns when printing (string length / array elements)
+# Limit amount of printed array elements
 
 format="standard"
 #input=""
 #output=""
 
 querylimit=10000
-colwidth=10
+arraylimit=10
 
 ############## Workload specification (WHERE clause) ##############
 # You can set [dataset/sequence/interval/method/process/selection] to work with
