--- a/vtapi.conf
+++ b/vtapi.conf
@@ -5,7 +5,7 @@ user="your_login"
 #password=""
 
 # specify your datasets location including the trailing slash
-location="/home/chmelarp/Projects/"
+location="/mnt/vidte/"
 
 # connection string is of the form "host=... port=.. dbname=... user=... password="
 connection="host=localhost port=4321 dbname=vidte user=vidte password="
