array print fix

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -27,7 +27,7 @@ log=""
 ############## Input/output ##############
 # Input/output format [standard|csv| html|binary|sparse]
 # Limit number of rows fetched at once per query (0 - unlimited)
-# Limit amount of printed array elements
+# Limit amount of printed array elements (0 - unlimited)
 
 format="standard"
 #input=""
