Just config settings...

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -4,6 +4,10 @@
 user="your_login"
 #password=""
 
+# you can alternatively connect to a server with limited database access (or VPN) as
+# ssh -L4321:vidte:5432 -L2222:vidte:22 kazi.fit.vutbr.cz
+# sshfs -p 2222 localhost:/mnt/data/datasets /mnt/vidte
+
 # specify your datasets location including the trailing slash
 location="/mnt/vidte/"
 
@@ -14,9 +18,6 @@ connection="host=localhost port=4321 dbname=vidte user=vidte password="
 # You can use an empty password in case you have it in your home folder
 # ~/.pgpass (%APPDATA%\postgresql\pgpass.conf on Windows) as:
 # localhost:4321:*:vidte:dummypassword
-
-# you can alternatively connect to a server with limited database access (or VPN) as
-# ssh -L4321:vidte:5432 kazi.fit.vutbr.cz
 
 # if debugging, #define _DEBUG and/or verbose at least
 verbose
