next() fix (probably)

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -28,7 +28,7 @@ log=""
 ############## Input/output ##############
 # Input/output format [standard|csv| html|binary|sparse]
 
-format="standard"
+format="csv"
 #input=""
 #output=""
 
