fix next(), pole poli

--- a/vtapi.conf
+++ b/vtapi.conf
@@ -39,7 +39,7 @@ arraylimit=10
 
 ############## Workload specification (WHERE clause) ##############
 # You can set [dataset/sequence/interval/method/process/selection] to work with
-dataset="public"
+dataset="sin12"
 #sequence=""
 #interval=""
 #method=""
