--- a/vtapi.conf
+++ b/vtapi.conf
@@ -12,7 +12,7 @@ user="your_login"
 location="/mnt/vidte/"
 
 # connection string is of the form "host=... port=.. dbname=... user=... password="
-connection="host=localhost port=4321 dbname=vidte user=vidte password="
+connection="host=localhost port=5433 dbname=vidte user=vidte password="
 
 # Recommendation:
 # You can use an empty password in case you have it in your home folder
@@ -28,7 +28,7 @@ log=""
 ############## Input/output ##############
 # Input/output format [standard|csv| html|binary|sparse]
 
-format="csv"
+#format="csv"
 #input=""
 #output=""
 
@@ -39,7 +39,7 @@ arraylimit=10
 
 ############## Workload specification (WHERE clause) ##############
 # You can set [dataset/sequence/interval/method/process/selection] to work with
-dataset="sin12"
+dataset="public"
 #sequence=""
 #interval=""
 #method=""
