--- a/vtapi.conf
+++ b/vtapi.conf
@@ -25,8 +25,11 @@ verbose
 # log file (empty for cerr)
 log=""
 
+# backend // TODO: http://www.codeproject.com/Articles/363338/Factory-Pattern-in-Cplusplus 
+#backend="postgres"
+
 ############## Input/output ##############
-# Input/output format [standard|csv| html|binary|sparse]
+# Input/output format [standard|csv|html] // TOBE: sparse|image|video?
 
 #format="csv"
 #input=""
