--- a/vtapi.conf
+++ b/vtapi.conf
@@ -12,7 +12,7 @@ user="your_login"
 location="/mnt/vidte/"
 
 # connection string is of the form "host=... port=.. dbname=... user=... password="
-connection="host=localhost port=5434 dbname=vidte user=vidte password="
+connection="host=localhost port=5432 dbname=vidte user=vidte password="
 
 # Recommendation:
 # You can use an empty password in case you have it in your home folder
@@ -42,7 +42,7 @@ arraylimit=10
 
 ############## Workload specification (WHERE clause) ##############
 # You can set [dataset/sequence/interval/method/process/selection] to work with
-dataset="public"
+dataset="test"
 #sequence=""
 #interval=""
 #method=""
