--- a/vtapi.conf
+++ b/vtapi.conf
@@ -1,53 +1,79 @@
 # VTApi configuration file
 
-############## User/connection ##############
-user="your_login"
+
+############## User information ##############
+
+# Set your user name and password (currently useless)
+user="mjackson"
 #password=""
 
-# you can alternatively connect to a server with limited database access (or VPN) as
+# Specify your datasets location (include the trailing slash)
+location="/mnt/mydata/"
+
+
+############# Connection #############
+
+# Set backend type and appropriate connection information:
+# connection    - for PostgreSQL
+# dbfolder      - for SQLite
+
+
+# Set database backend [postgres|sqlite]
+backend="postgres"
+
+
+#### PostgreSQL connection ####
+# PostgreSQL connection string. Use format "host=... port=.. dbname=... user=... password="
+connection="host=localhost port=4321 dbname=mydb user=mjackson password="
+
+# Hint: you can alternatively connect to a server with limited database access (or VPN) like this:
 # ssh -L4321:vidte:5432 -L2222:vidte:22 kazi.fit.vutbr.cz
 # sshfs -p 2222 localhost:/mnt/data/datasets /mnt/vidte
-
-# specify your datasets location including the trailing slash
-location="/mnt/vidte/"
-
-# connection string is of the form "host=... port=.. dbname=... user=... password="
-connection="host=localhost port=5432 dbname=vidte user=vidte password="
 
 # Recommendation:
 # You can use an empty password in case you have it in your home folder
 # ~/.pgpass (%APPDATA%\postgresql\pgpass.conf on Windows) as:
 # localhost:4321:*:vidte:dummypassword
 
-# if debugging, #define _DEBUG and/or verbose at least
+
+#### SQLite connection ####
+# SQLite databases folder. It must contain vtapi_public.db and a database for each dataset (vtapi_XXX.db)
+# example of contents: vtapi_public.db, vtapi_mytestdataset.db, vtapi_sin12.db
+dbfolder="/mnt/vtapi/sqlite"
+
+
+############## Error messaging ##############
+
+# Uncomment for verbose output (all queries and warnings)
 verbose
 
-# log file (empty for cerr)
+# Specify log file (empty for standard error output)
 log=""
 
-# backend // TODO: http://www.codeproject.com/Articles/363338/Factory-Pattern-in-Cplusplus 
-#backend="postgres"
 
 ############## Input/output ##############
-# Input/output format [standard|csv|html] // TOBE: sparse|image|video?
 
-#format="csv"
+# Output format [standard|csv|html]
+format="csv"
+
+# Don't use this yet
 #input=""
 #output=""
 
-# Limit number of rows fetched at once per query (0 - unlimited)
+# Limit number of rows retrieved at once per query (0 - unlimited)
 querylimit=10000
 # Limit amount of printed array elements (0 - unlimited)
 arraylimit=10
 
+
 ############## Workload specification (WHERE clause) ##############
-# You can set [dataset/sequence/interval/method/process/selection] to work with
+
+# You can set [dataset|sequence|selection|method|process] to work with
 dataset="test"
 #sequence=""
-#interval=""
+#selection=""
 #method=""
 #process=""
-#selection=""
 
-# or explicitly specify the WHERE clause, ex.: where="features is NULL"
-#where=""
+
+
