--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ vtcli_LDFLAGS = $(DEPS_LIBS) $(opencv_LIBS) $(sqlite3_LIBS) $(PQ_LIBS) $(LIBLWGE
 
 #LDADD = -L/home/imlich/workspace/trecvid2013/vtapi-autotools/lib/.libs/libexample-1.0.so -lexample 
 #LDADD = $(top_builddir)/src/.libs/libvtapi-1.6.so.0.1.6 
-LDADD = $(top_builddir)/src/.libs/libvtapi-1.6.so
+LDADD = -L./src/.libs/ -lvtapi-2.0
 
 #LDADD=$(top_builddir)/lib/.libs/libvtapi-1.5.so.0.1.5 \
 #  -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_flann -lpq -lpqtypes -lgeos_c -lprocps -llwgeom
