--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,7 @@ bin_PROGRAMS = vtcli
 vtcli_SOURCES = vtcli.cpp
 vtcli_CFLAGS = $(PQ_CFLAGS) $(LIBLWGEOM_CFLAGS) $(GEOS_CFLAGS) $(OPENCV_CFLAGS) $(SQLITE_CFLAGS) $(LTDL_CFLAGS) $(READPROC_CFLAGS)
 vtcli_CXXFLAGS = $(PQ_CFLAGS) $(LIBLWGEOM_CFLAGS) $(GEOS_CFLAGS) $(OPENCV_CFLAGS) $(SQLITE_CFLAGS) $(LTDL_CFLAGS) $(READPROC_CFLAGS)
-vtcli_LDFLAGS = $(DEPS_LIBS) $(OPENCV_LIBS) $(SQLITE_LIBS) $(PQ_LIBS) $(LIBLWGEOM_LIBS) $(GEOS_LIBS) $(LTDL_LIBS) $(READPROC_LIBS)
+vtcli_LDFLAGS = $(DEPS_LIBS) $(OPENCV_LIBS) $(SQLITE_LIBS) $(LIBPQTYPES_LIBS) $(PQ_LIBS) $(LIBLWGEOM_LIBS) $(GEOS_LIBS) $(LTDL_LIBS) $(READPROC_LIBS)
 
 #LDADD = -L/home/imlich/workspace/trecvid2013/vtapi-autotools/lib/.libs/libexample-1.0.so -lexample 
 #LDADD = $(top_builddir)/src/.libs/libvtapi-1.6.so.0.1.6 
