livtapi-2.0.* => libtapi.* (2.0 designation is not a part of project/library name, but a version of library => libvtapi.so.2.0 is a correct form of the library version designation!)

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,16 +12,9 @@ bin_PROGRAMS = vtcli
 vtcli_SOURCES = vtcli.cpp
 vtcli_CFLAGS = $(PQ_CFLAGS) $(LIBLWGEOM_CFLAGS) $(GEOS_CFLAGS) $(OPENCV_CFLAGS) $(SQLITE_CFLAGS) $(LTDL_CFLAGS) $(READPROC_CFLAGS)
 vtcli_CXXFLAGS = $(PQ_CFLAGS) $(LIBLWGEOM_CFLAGS) $(GEOS_CFLAGS) $(OPENCV_CFLAGS) $(SQLITE_CFLAGS) $(LTDL_CFLAGS) $(READPROC_CFLAGS)
-vtcli_LDFLAGS = -no-install -L$(abs_top_builddir)/src/.libs $(DEPS_LIBS) $(OPENCV_LIBS) $(SQLITE_LIBS) $(LIBPQTYPES_LIBS) $(PQ_LIBS) $(LIBLWGEOM_LIBS) $(GEOS_LIBS) $(LTDL_LIBS) $(READPROC_LIBS) -lvtapi-2.0
+vtcli_LDFLAGS = -no-install -L$(abs_top_builddir)/src/.libs $(DEPS_LIBS) $(OPENCV_LIBS) $(SQLITE_LIBS) $(LIBPQTYPES_LIBS) $(PQ_LIBS) $(LIBLWGEOM_LIBS) $(GEOS_LIBS) $(LTDL_LIBS) $(READPROC_LIBS) -lvtapi
 
-#LDADD = -L/home/imlich/workspace/trecvid2013/vtapi-autotools/lib/.libs/libexample-1.0.so -lexample 
-#LDADD = $(top_builddir)/src/.libs/libvtapi-1.6.so.0.1.6 
-#LDADD = -lvtapi-2.0
-
-#LDADD=$(top_builddir)/lib/.libs/libvtapi-1.5.so.0.1.5 \
-#  -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_flann -lpq -lpqtypes -lgeos_c -lprocps -llwgeom
-
-#LDADD = -L../lib -lexample 
+#LDADD = -lvtapi
 
 AM_CPPFLAGS = -I$(abs_top_builddir)/include
 #AM_LDFLAGS = 
